[package]
name = "tonks"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
# legion = { git = "https://github.com/jaynus/legion", branch = "systems", rev = "f8ef758364c7d203a696fc292c9f0fba9f86c10a" }
crossbeam = "0.7"
hashbrown = "0.6"
rayon = "1.2"
smallvec = "0.6"
arrayvec = "0.5"
bumpalo = "2.6"
thread_local = "1.0"
bit-set = "0.5"
derivative = "1.0"
lazy_static = "1.4"
parking_lot = "0.9"
mopa = "0.2"
static_assertions = "1.0"

[dev-dependencies]
criterion = "0.3"

# For comparison in performance
shred = "0.9.3"
specs = "0.15.1"

[[bench]]
name = "basic"
harness = false
