[package]
name = "tonks"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
tonks-macros = { path = "macros" }
legion = { git = "https://github.com/feather-rs/legion", rev = "15d2b5c47b2a935dbf238698b9d7c299f3824280" }
crossbeam = "0.7"
hashbrown = "0.6"
rayon = "1.2"
smallvec = "0.6"
arrayvec = "0.5"
bumpalo = "3.0"
thread_local = "1.0"
bit-set = "0.5"
derivative = "1.0"
lazy_static = "1.4"
parking_lot = "0.9"
mopa = "0.2"
static_assertions = "1.0"
inventory = { version = "0.1", optional = true }

[dev-dependencies]
criterion = "0.3"

# For comparison in performance
shred = "0.9.3"
specs = "0.15.1"

[features]
system-registry = ["tonks-macros/system-registry", "inventory"]

[[bench]]
name = "basic"
harness = false
